kubernetes-networks/canary/ing-web-canary.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-canary-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  rules:
  - host: web.info
    http:
      paths:
      - path: /
        backend:
          serviceName: web-canary-svc
          servicePort: 8000
