kubernetes-networks/canary/ing-web-prod.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-prod-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: web.info
    http:
      paths:
      - path: /
        backend:
          serviceName: web-prod-svc
          servicePort: 8000
